<resources>
    <string name="app_name">UserProfile</string>

    <string name="user_login">User Login</string>
    <string name="label_email">email</string>
    <string name="label_password">password</string>
    <string name="label_confirm">confirm</string>
    <string name="label_login">Login</string>
    <string name="label_register">Register</string>
    <string name="label_login_google">Login with Google+</string>
    <string name="label_login_fb">Login with Facebook</string>
    <string name="label_or">or</string>
    <string name="action_settings">Settings</string>
</resources>
